tests/baselines/reference/promiseEmptyTupleNoException.errors.txt
tests/cases/compiler/promiseEmptyTupleNoException.ts(1,38): error TS1122: A tuple type element list cannot be empty.
tests/cases/compiler/promiseEmptyTupleNoException.ts(3,3): error TS2322: Type 'any[]' is not assignable to type '[]'.
  Types of property 'pop' are incompatible.
    Type '() => any' is not assignable to type '() => never'.
      Type 'any' is not assignable to type 'never'.


==== tests/cases/compiler/promiseEmptyTupleNoException.ts (2 errors) ====
    export async function get(): Promise<[]> {
                                         ~~
!!! error TS1122: A tuple type element list cannot be empty.
      let emails = [];
      return emails;
      ~~~~~~~~~~~~~~
!!! error TS2322: Type 'any[]' is not assignable to type '[]'.
!!! error TS2322:   Types of property 'pop' are incompatible.
!!! error TS2322:     Type '() => any' is not assignable to type '() => never'.
!!! error TS2322:       Type 'any' is not assignable to type 'never'.
    }
    